[package]
name = "r2d2-cryptoki"
version = "0.1.0"
edition = "2021"
authors = ["Spruce Systems, Inc."]
license = "MIT OR Apache-2.0"
description = "r2d2 adaptor for cryptoki"
repository = "https://github.com/spruceid/r2d2-cryptoki/"
documentation = "https://docs.rs/r2d2-cryptoki/"

[dependencies]
cryptoki = { version = "0.4.1", git = "https://github.com/DeppLearning/rust-cryptoki", rev = "e14e54c447c8cd6abceb688b4424692807a69243", default-features = false  }
r2d2 = "0.8.10"

[dev-dependencies]
backoff = "0.4.0"
cached = "0.42.0"
loom = "0.5.6"

[workspace.metadata.release]
sign-tag = true
tag-message = "Release version {{version}}."
pre-release-commit-message = "Release"
